// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReduxTypes should have specific type properties: all redux types 1`] = `
Object {
  "appTypes": Object {
    "STATUS_4XX": "4XX",
    "STATUS_5XX": "5XX",
  },
  "default": Object {
    "app": Object {
      "STATUS_4XX": "4XX",
      "STATUS_5XX": "5XX",
    },
    "graph": Object {
      "SET_GRAPH_LEGEND": "SET_GRAPH_LEGEND",
    },
    "platform": Object {
      "PLATFORM_ADD_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/ADD_NOTIFICATION",
      "PLATFORM_APP_NAME": "PLATFORM_APP_NAME",
      "PLATFORM_CLEAR_NOTIFICATIONS": "@@INSIGHTS-CORE/NOTIFICATIONS/CLEAR_NOTIFICATIONS",
      "PLATFORM_INIT": "PLATFORM_INIT",
      "PLATFORM_ON_NAV": "PLATFORM_ON_NAV",
      "PLATFORM_REMOVE_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/REMOVE_NOTIFICATION",
      "PLATFORM_SET_NAV": "PLATFORM_SET_NAV",
    },
    "rhsm": Object {
      "GET_GRAPH_CAPACITY_RHSM": "GET_GRAPH_CAPACITY_RHSM",
      "GET_GRAPH_REPORT_CAPACITY_RHSM": "GET_GRAPH_REPORT_CAPACITY_RHSM",
      "GET_GRAPH_REPORT_RHSM": "GET_GRAPH_REPORT_RHSM",
      "SET_GRAPH_GRANULARITY_RHSM": "SET_GRAPH_GRANULARITY_RHSM",
      "SET_GRAPH_SLA_RHSM": "SET_GRAPH_SLA_RHSM",
    },
    "user": Object {
      "DELETE_USER_OPTIN": "DELETE_USER_OPTIN",
      "GET_USER_OPTIN": "GET_USER_OPTIN",
      "UPDATE_USER_OPTIN": "UPDATE_USER_OPTIN",
      "USER_AUTH": "USER_AUTH",
      "USER_LOCALE": "USER_LOCALE",
      "USER_LOGOUT": "USER_LOGOUT",
    },
  },
  "graphTypes": Object {
    "SET_GRAPH_LEGEND": "SET_GRAPH_LEGEND",
  },
  "platformTypes": Object {
    "PLATFORM_ADD_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/ADD_NOTIFICATION",
    "PLATFORM_APP_NAME": "PLATFORM_APP_NAME",
    "PLATFORM_CLEAR_NOTIFICATIONS": "@@INSIGHTS-CORE/NOTIFICATIONS/CLEAR_NOTIFICATIONS",
    "PLATFORM_INIT": "PLATFORM_INIT",
    "PLATFORM_ON_NAV": "PLATFORM_ON_NAV",
    "PLATFORM_REMOVE_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/REMOVE_NOTIFICATION",
    "PLATFORM_SET_NAV": "PLATFORM_SET_NAV",
  },
  "reduxTypes": Object {
    "app": Object {
      "STATUS_4XX": "4XX",
      "STATUS_5XX": "5XX",
    },
    "graph": Object {
      "SET_GRAPH_LEGEND": "SET_GRAPH_LEGEND",
    },
    "platform": Object {
      "PLATFORM_ADD_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/ADD_NOTIFICATION",
      "PLATFORM_APP_NAME": "PLATFORM_APP_NAME",
      "PLATFORM_CLEAR_NOTIFICATIONS": "@@INSIGHTS-CORE/NOTIFICATIONS/CLEAR_NOTIFICATIONS",
      "PLATFORM_INIT": "PLATFORM_INIT",
      "PLATFORM_ON_NAV": "PLATFORM_ON_NAV",
      "PLATFORM_REMOVE_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/REMOVE_NOTIFICATION",
      "PLATFORM_SET_NAV": "PLATFORM_SET_NAV",
    },
    "rhsm": Object {
      "GET_GRAPH_CAPACITY_RHSM": "GET_GRAPH_CAPACITY_RHSM",
      "GET_GRAPH_REPORT_CAPACITY_RHSM": "GET_GRAPH_REPORT_CAPACITY_RHSM",
      "GET_GRAPH_REPORT_RHSM": "GET_GRAPH_REPORT_RHSM",
      "SET_GRAPH_GRANULARITY_RHSM": "SET_GRAPH_GRANULARITY_RHSM",
      "SET_GRAPH_SLA_RHSM": "SET_GRAPH_SLA_RHSM",
    },
    "user": Object {
      "DELETE_USER_OPTIN": "DELETE_USER_OPTIN",
      "GET_USER_OPTIN": "GET_USER_OPTIN",
      "UPDATE_USER_OPTIN": "UPDATE_USER_OPTIN",
      "USER_AUTH": "USER_AUTH",
      "USER_LOCALE": "USER_LOCALE",
      "USER_LOGOUT": "USER_LOGOUT",
    },
  },
  "rhsmTypes": Object {
    "GET_GRAPH_CAPACITY_RHSM": "GET_GRAPH_CAPACITY_RHSM",
    "GET_GRAPH_REPORT_CAPACITY_RHSM": "GET_GRAPH_REPORT_CAPACITY_RHSM",
    "GET_GRAPH_REPORT_RHSM": "GET_GRAPH_REPORT_RHSM",
    "SET_GRAPH_GRANULARITY_RHSM": "SET_GRAPH_GRANULARITY_RHSM",
    "SET_GRAPH_SLA_RHSM": "SET_GRAPH_SLA_RHSM",
  },
  "userTypes": Object {
    "DELETE_USER_OPTIN": "DELETE_USER_OPTIN",
    "GET_USER_OPTIN": "GET_USER_OPTIN",
    "UPDATE_USER_OPTIN": "UPDATE_USER_OPTIN",
    "USER_AUTH": "USER_AUTH",
    "USER_LOCALE": "USER_LOCALE",
    "USER_LOGOUT": "USER_LOGOUT",
  },
}
`;

exports[`ReduxTypes should have specific type properties: specific types 1`] = `
Object {
  "app": Object {
    "STATUS_4XX": "4XX",
    "STATUS_5XX": "5XX",
  },
  "graph": Object {
    "SET_GRAPH_LEGEND": "SET_GRAPH_LEGEND",
  },
  "platform": Object {
    "PLATFORM_ADD_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/ADD_NOTIFICATION",
    "PLATFORM_APP_NAME": "PLATFORM_APP_NAME",
    "PLATFORM_CLEAR_NOTIFICATIONS": "@@INSIGHTS-CORE/NOTIFICATIONS/CLEAR_NOTIFICATIONS",
    "PLATFORM_INIT": "PLATFORM_INIT",
    "PLATFORM_ON_NAV": "PLATFORM_ON_NAV",
    "PLATFORM_REMOVE_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/REMOVE_NOTIFICATION",
    "PLATFORM_SET_NAV": "PLATFORM_SET_NAV",
  },
  "rhsm": Object {
    "GET_GRAPH_CAPACITY_RHSM": "GET_GRAPH_CAPACITY_RHSM",
    "GET_GRAPH_REPORT_CAPACITY_RHSM": "GET_GRAPH_REPORT_CAPACITY_RHSM",
    "GET_GRAPH_REPORT_RHSM": "GET_GRAPH_REPORT_RHSM",
    "SET_GRAPH_GRANULARITY_RHSM": "SET_GRAPH_GRANULARITY_RHSM",
    "SET_GRAPH_SLA_RHSM": "SET_GRAPH_SLA_RHSM",
  },
  "user": Object {
    "DELETE_USER_OPTIN": "DELETE_USER_OPTIN",
    "GET_USER_OPTIN": "GET_USER_OPTIN",
    "UPDATE_USER_OPTIN": "UPDATE_USER_OPTIN",
    "USER_AUTH": "USER_AUTH",
    "USER_LOCALE": "USER_LOCALE",
    "USER_LOGOUT": "USER_LOGOUT",
  },
}
`;
